2008-06-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.3 released.

2008-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (GenerateNoise): Poisson noise generation was
	taking excessively long and producing wrong results.

2008-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Deal with grayscale images the
	GraphicsMagick-way.

2008-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Validate XCF file data so that
	corrupted files don't crash GraphicsMagick.

2008-05-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadDPXImage): Incrementally read user data
	part and check for EOF so that bogus files are rejected quickly.
	* coders/cineon.c (ReadCINEONImage): Incrementally read user data
	part and check for EOF so that bogus files are rejected quickly.

2008-05-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pict.c (ReadPICTImage): Ensure that row_bytes calculation
	does not overflow.  Verify that RLE decode does not overflow
	buffer.  Validate image frame dimensions.	
	* coders/palm.c (ReadPALMImage): Validate PALM bits per pixel and
	colormap indexes.
	* coders/pdf.c (ReadPDFImage): Properly deal with reading rotated
	PDFs.

2008-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.2.2 released.

2008-05-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c (CompositeImage): Don't leak displacement
	image when Displacement composition is used.
	* PerlMagick/demo/demo.pl: Use segmentation parameters which are
	more appropriate for the image used.
	* magick/image.h: Add MaxRGBDouble, MaxRGBFloat, MaxMapDouble, and
	MaxMapFloat for use in cases where a floating point constant is
	useful.
	(RoundDoubleToQuantum): New macro to round a 'double' to a quantum.
	(RoundFloatToQuantum): New macro to round a 'float' to a quantum.