@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2008-06-08  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/image.c (SetImageInfo): Extend the list of extensions to
+        exclude to include all virtual delegates and coders for
+        pseudo-formats.
+
+</UL>
+<p>
 2008-06-05  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
